<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/me_icon_bg1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/me_icon" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:background="#00000000"
        android:orientation="vertical" >

        <!-- <Spinner
            android:layout_width="fill_parent"
            android:layout_height="1dp" /> -->

        <!-- 添加新消息 -->
		<include 
		    layout="@layout/divider"
		    />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="@drawable/mebutton"
            >

            <Button
                android:id="@+id/me_mypublish"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/me_mypublish"
                android:textSize="@dimen/me_title_size" />

            <TextView
                android:id="@+id/mypublish_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:background="@drawable/shownum"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="10sp"
                android:visibility="invisible" />
        </FrameLayout>

        <!-- <Spinner
            android:layout_width="fill_parent"
            android:layout_height="1dp" /> -->
		<include 
		    layout="@layout/divider"
		    />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:background="@drawable/mebutton"
            >

            <Button
                android:id="@+id/me_myreply"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/me_myreply"
                android:textSize="@dimen/me_title_size" />

            <TextView
                android:id="@+id/myreply_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:background="@drawable/shownum"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textSize="10sp"
                android:visibility="invisible" />
        </FrameLayout>
		<include 
		    layout="@layout/divider"
		    />

       <!--  <Spinner
            android:layout_width="fill_parent"
            android:layout_height="1dp" /> -->

        <Button
            android:id="@+id/me_mysuggestion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mebutton"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/me_suggestion"
            android:textSize="@dimen/me_title_size" />

        <!-- <Spinner
            android:layout_width="fill_parent"
            android:layout_height="1dp" /> -->
        <!-- 版本检测改为用户协议 -->
		<include 
		    layout="@layout/divider"
		    />
        <Button
            android:id="@+id/me_checkversion"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mebutton"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/me_checkversion"
            android:textSize="@dimen/me_title_size" />
		<include 
		    layout="@layout/divider"
		    />
        <!-- <Spinner
            android:layout_width="fill_parent"
            android:layout_height="1dp" /> -->
    </LinearLayout>

</LinearLayout>